<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ui_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".dashboard.DashboardActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="120dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/safari_Tanzania"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/safari_tanzania"
                    android:textColor="#ffffff"
                    android:textSize="27sp"
                    tools:ignore="RelativeOverlap" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/safari_Tanzania"
                    android:text="@string/your_travel_partner"
                    android:textColor="#FAFAFD"
                    android:textSize="18sp" />


                <ImageView
                    android:id="@+id/safari_logo_icon"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/safaris_icon">

                </ImageView>
            </RelativeLayout>


            <GridLayout
                android:id="@+id/grid_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="3">


                <androidx.cardview.widget.CardView
                    android:id="@+id/national_park_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <ImageView
                            android:id="@+id/national_park_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/zebra_one" />

                        <TextView
                            android:id="@+id/text_national_park"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/national_park"
                            android:textColor="#6f6f6f" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/conservation_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <ImageView
                            android:id="@+id/conservation_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/conservation" />

                        <TextView
                            android:id="@+id/text_conservation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/conservation_area"
                            android:textColor="#6f6f6f" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/unesco_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <ImageView
                            android:id="@+id/national_park_iconss"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/un_logo" />

                        <TextView
                            android:id="@+id/text_UNESCO_World"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/unesco_world_heritage"
                            android:textColor="#6f6f6f" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/kilimanjaro_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <ImageView
                            android:id="@+id/kilimanjaro_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/mount_two" />

                        <TextView
                            android:id="@+id/text_mount_kili"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/mount_kilimanjaro"
                            android:textColor="#6f6f6f" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/museum_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <ImageView
                            android:id="@+id/museum_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/museum_two" />

                        <TextView
                            android:id="@+id/text_museum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/museum"
                            android:textColor="#6f6f6f" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/culture_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <ImageView
                            android:id="@+id/culture"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/culture_two" />

                        <TextView
                            android:id="@+id/text_culture"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/culture"
                            android:textColor="#6f6f6f" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/restaurant_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <ImageView
                            android:id="@+id/restaurant_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/restaurent_one" />

                        <TextView
                            android:id="@+id/text_Restaurant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/restaurant"
                            android:textColor="#6f6f6f" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hotel_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <ImageView
                            android:id="@+id/hotel_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/hotels_icon" />

                        <TextView
                            android:id="@+id/text_hotels"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/hotel"
                            android:textColor="#6f6f6f" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </GridLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>